--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Build
       run: |
         docker build . --file otel-javaagent-1.23.Dockerfile --tag demtag/otel-javaagent:1.23
+        docker build . --file otel-javaagent-1.24.Dockerfile --tag demtag/otel-javaagent:1.24
     - name: Login to registry
       run: docker login --username ${DOCKER_USERNAME} --password ${DOCKER_PASSWORD}
       env:
@@ -22,3 +23,4 @@ jobs:
     - name: Push
       run: |
         docker push demtag/otel-javaagent:1.23
+        docker push demtag/otel-javaagent:1.24
